--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,19 +4,22 @@
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2589bd;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
     header h1 {
         display: inline-block;
-        font-size: 48px;
-        color: #d9dcd6;
-        font-weight: bold;
-        position: relative;
-        left: 30px;
     }
 
     header nav {
@@ -26,4 +29,67 @@ header {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 22px;
         list-style-type: none;
+    }
+
+.MainPrompt{
+    padding: 50px 200px 200px 200px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+    .MainPrompt h1{
+        display:flex;
+        align-items: center;
+        flex-direction: column;
+        padding-bottom:25px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+
+    .MainPrompt p{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        text-align: center;
+    }
+
+.QuizTitle{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:aliceblue;
+}
+
+.highScore{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: 2px solid #879fc2;
+    text-align: center;
+    background-color: #3160c7;
+    display: flex;
+    position: relative;
+    bottom: 5px;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    height: 35px;
+    width: 250px;
+    border-radius: 5px;
+}
+
+#startbutton {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin-top: 25px;
+    border: 2px solid #879fc2;
+    width: 155px;
+    height: 50px;
+    text-align: center;
+    background-color: #3160c7;
+    display: flex;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 5px;  
+}
+          
+    #startbutton:hover {
+        background-color: rgb(68, 137, 201);
     }
