Got clear high scores function working, still need to clean up css for the rest

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+li{
+    list-style-type: none;
+}
+
 header {
     padding: 20px;
     font-family: var(--mainFont);
